frontend/src/styles/chart.scss
#digital-agenda-app {
  .chart-filters {
    display: grid;
    grid-gap: 0.5rem 2rem;
    grid-template-columns: 1fr;
    grid-auto-flow: dense;
  }

  @media screen and (min-width: 768px) {
    .chart-filters {
      grid-template-columns: 1fr 1fr;

      .chart-filterX {
        grid-column: 1;
      }

      .chart-filterY {
        grid-column: 2;
      }

      .chart-filterZ {
        grid-column: 1 / -1;
      }

      .chart-filter-full {
        grid-column: 1 / -1;
      }
    }
  }

  .chart-container-digital-agenda {
    position: relative;
    min-height: 700px;

    @media (min-width: 768px) {
      min-height: 600px;
    }
  }

  .chart-container-digital-agenda > * {
    height: 700px;

    @media (min-width: 768px) {
      // Slightly less height is needed on larger screens as we move
      // the legend to the right of the chart instead of the bottom
      height: 600px;
    }
  }

  // Map Chart need totally different sizes
  .chart-container-digital-agenda {
    &.CountryProfileRainbow,
    &.EUMapCompareCountries,
    &.WorldMapCompareCountries {
      min-height: 600px;

      @media (min-width: 768px) {
        min-height: 848px;
      }

      & > * {
        height: 600px;

        @media (min-width: 768px) {
          height: 848px;
        }
      }
    }
  }
}

body.digital-agenda-embedded {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 0;
  margin: 0;
}

.digital-agenda-embedded #digital-agenda-app {
  height: 100%;

  .chart-filters {
    display: none;
  }

  .chart-container-digital-agenda {
    border: none !important;
    margin: 0 !important;
    padding: 0 !important;
  }

  .chart-container-digital-agenda,
  .chart-container-digital-agenda > * {
    height: 100%;
  }
}

